@@ -1768,8 +1768,7 @@ usualBinaryConversions (operand ** op1, operand ** op2,
   bool oldOneByteOps = FALSE;
   static bool saidHello = FALSE;
   
-  if (   strcmp (port->target, "pic14") == 0
-      || strcmp (port->target, "pic16") == 0)
+  if (strcmp (port->target, "pic14") == 0)
     oldOneByteOps = TRUE;
   if (getenv ("SDCC_NEWONEBYTEOPS"))
     {
@@ -2090,9 +2089,11 @@ geniCodeMultiply (operand * left, operand * right, bool resultIsInt)
   /* code generated for 1 byte * 1 byte literal = 2 bytes result is more
      efficient in most cases than 2 bytes result = 2 bytes << literal
      if port has 1 byte muldiv */
-  if (p2 && !IS_FLOAT (letype) &&
-      !((resultIsInt) && (getSize (resType) != getSize (ltype)) &&
-	(port->support.muldiv == 1)))
+  if (p2 && !IS_FLOAT (letype)
+      && !((resultIsInt) && (getSize (resType) != getSize (ltype))
+           && (port->support.muldiv == 1))
+      && strcmp (port->target, "pic14") != 0  /* don't shift for pic */
+      && strcmp (port->target, "pic16") != 0)
     {
       if ((resultIsInt) && (getSize (resType) != getSize (ltype)))
 	{
